# TDT4230-project

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: fragment.glsl
include/core/: Application.hpp
src/: main.cpp
src/core/: Application.cpp
